--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -322,6 +322,10 @@
     <Compile Include="AgricultureContextMigrations\202210250952001_Agriculture_DistributionUser.Designer.cs">
       <DependentUpon>202210250952001_Agriculture_DistributionUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210251128527_Agriculture_zoneUser.cs" />
+    <Compile Include="AgricultureContextMigrations\202210251128527_Agriculture_zoneUser.Designer.cs">
+      <DependentUpon>202210251128527_Agriculture_zoneUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -547,6 +551,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210250952001_Agriculture_DistributionUser.resx">
       <DependentUpon>202210250952001_Agriculture_DistributionUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210251128527_Agriculture_zoneUser.resx">
+      <DependentUpon>202210251128527_Agriculture_zoneUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
