--- a/ERPBLL/ERPBLL.csproj
+++ b/ERPBLL/ERPBLL.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Agriculture\Interface\IRawMaterialTrack.cs" />
     <Compile Include="Agriculture\Interface\IRegionSetup.cs" />
     <Compile Include="Agriculture\Interface\IRegionUserBusiness.cs" />
+    <Compile Include="Agriculture\Interface\IReturnRawMaterialBusiness.cs" />
     <Compile Include="Agriculture\Interface\ISalesPaymentRegister.cs" />
     <Compile Include="Agriculture\Interface\IStockiestInfo.cs" />
     <Compile Include="Agriculture\Interface\IStockiestUserBusiness.cs" />
@@ -168,6 +169,7 @@
     <Compile Include="Agriculture\RawMaterialTrackBusiness.cs" />
     <Compile Include="Agriculture\RegionSetupBusiness.cs" />
     <Compile Include="Agriculture\RegionUserBusiness.cs" />
+    <Compile Include="Agriculture\ReturnRawMaterialBusiness.cs" />
     <Compile Include="Agriculture\SalesPaymentRegisterBusiness.cs" />
     <Compile Include="Agriculture\StockiestInfoBusiness.cs" />
     <Compile Include="Agriculture\StockiestUserBusiness.cs" />
