--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -326,6 +326,10 @@
     <Compile Include="AgricultureContextMigrations\202210251128527_Agriculture_zoneUser.Designer.cs">
       <DependentUpon>202210251128527_Agriculture_zoneUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210251352077_Agriculture_RawMaterialReturn.cs" />
+    <Compile Include="AgricultureContextMigrations\202210251352077_Agriculture_RawMaterialReturn.Designer.cs">
+      <DependentUpon>202210251352077_Agriculture_RawMaterialReturn.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -554,6 +558,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210251128527_Agriculture_zoneUser.resx">
       <DependentUpon>202210251128527_Agriculture_zoneUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210251352077_Agriculture_RawMaterialReturn.resx">
+      <DependentUpon>202210251352077_Agriculture_RawMaterialReturn.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
