--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -330,6 +330,10 @@
     <Compile Include="AgricultureContextMigrations\202210251352077_Agriculture_RawMaterialReturn.Designer.cs">
       <DependentUpon>202210251352077_Agriculture_RawMaterialReturn.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210260443123_Agriculture_RegionUser.cs" />
+    <Compile Include="AgricultureContextMigrations\202210260443123_Agriculture_RegionUser.Designer.cs">
+      <DependentUpon>202210260443123_Agriculture_RegionUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -561,6 +565,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210251352077_Agriculture_RawMaterialReturn.resx">
       <DependentUpon>202210251352077_Agriculture_RawMaterialReturn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210260443123_Agriculture_RegionUser.resx">
+      <DependentUpon>202210260443123_Agriculture_RegionUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
