--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3192,12 +3192,10 @@
     <Content Include="Views\AgroConfiguration\GetAgroSalesProductList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetAgroSalesProductList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetAgroSalesProductDetails.cshtml" />
-
     <Content Include="Views\AgroConfiguration\RawMaterialReturnList.cshtml" />
-
     <Content Include="Views\AgroConfiguration\InvoicePayment.cshtml" />
     <Content Include="Views\AgroConfiguration\InvoicePayment1.cshtml" />
-
+    <Content Include="Views\AgroConfiguration\_GetRawMaterialIssueView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
