--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -82,6 +82,10 @@
     <Compile Include="AgricultureContextMigrations\202210270701388_upreturn.Designer.cs">
       <DependentUpon>202210270701388_upreturn.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210270953504_Agriculture_RequistionRawMaterialInfoandDetails.cs" />
+    <Compile Include="AgricultureContextMigrations\202210270953504_Agriculture_RequistionRawMaterialInfoandDetails.Designer.cs">
+      <DependentUpon>202210270953504_Agriculture_RequistionRawMaterialInfoandDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -127,6 +131,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210270701388_upreturn.resx">
       <DependentUpon>202210270701388_upreturn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210270953504_Agriculture_RequistionRawMaterialInfoandDetails.resx">
+      <DependentUpon>202210270953504_Agriculture_RequistionRawMaterialInfoandDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
