--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -90,6 +90,8 @@
     <Compile Include="Agriculture\DomainModels\PRawMaterialStockInfo.cs" />
     <Compile Include="Agriculture\DomainModels\RawMaterialIssueStockDetails.cs" />
     <Compile Include="Agriculture\DomainModels\RawMaterialIssueStockInfo.cs" />
+    <Compile Include="Agriculture\DomainModels\RawMaterialRequisitionInfo.cs" />
+    <Compile Include="Agriculture\DomainModels\RawMaterialRequisitionDetails.cs" />
     <Compile Include="Agriculture\DomainModels\RawMaterialStock.cs" />
     <Compile Include="Agriculture\DomainModels\RawMaterialStockDetail.cs" />
     <Compile Include="Agriculture\DomainModels\RawMaterialTrack.cs" />
@@ -124,6 +126,8 @@
     <Compile Include="Agriculture\DTOModels\PRawMaterialStockInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialIssueStockDetailsDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialIssueStockInfoDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\RawMaterialRequisitionDetailsDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\RawMaterialRequisitionInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialStockDetailDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialStockDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialTrackDTO.cs" />
@@ -157,6 +161,8 @@
     <Compile Include="Agriculture\ViewModels\PRawMaterialStockInfoViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\RawMaterialIssueStockDetailsViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\RawMaterialIssueStockInfoViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\RawMaterialRequisitionDetailsViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\RawMaterialRequisitionInfoViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\RawMaterialStockDetailViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\RawMaterialStockViewModel.cs" />
     <Compile Include="Agriculture\DomainModels\FinishGoodRecipeDetails.cs" />
