--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -86,6 +86,10 @@
     <Compile Include="AgricultureContextMigrations\202210270953504_Agriculture_RequistionRawMaterialInfoandDetails.Designer.cs">
       <DependentUpon>202210270953504_Agriculture_RequistionRawMaterialInfoandDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210301046165_Agriculture_MeasurementUpdate.cs" />
+    <Compile Include="AgricultureContextMigrations\202210301046165_Agriculture_MeasurementUpdate.Designer.cs">
+      <DependentUpon>202210301046165_Agriculture_MeasurementUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -134,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210270953504_Agriculture_RequistionRawMaterialInfoandDetails.resx">
       <DependentUpon>202210270953504_Agriculture_RequistionRawMaterialInfoandDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210301046165_Agriculture_MeasurementUpdate.resx">
+      <DependentUpon>202210301046165_Agriculture_MeasurementUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
