--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3214,19 +3214,15 @@
     <Content Include="Views\AgroConfiguration\_GetRawMaterialIssueView.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetRawMaterialMainView.cshtml" />
     <Content Include="Views\AgroConfiguration\GetRequisition.cshtml" />
-
     <Content Include="Views\AgroConfiguration\CreateRawMaterialReturnList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetReturnRawMaterial.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetDueInvoicePartialView.cshtml" />
     <Content Include="Views\AgroConfiguration\SalesPaymentList.cshtml" />
     <Content Include="Views\AgroConfiguration\_PaymentHistoryDetails.cshtml" />
-
     <Content Include="Views\AgroConfiguration\_GetRequisition.cshtml" />
-
     <Content Include="Views\AgroConfiguration\SaveRequisition.cshtml" />
-
-
-
+    <Content Include="Views\AgroConfiguration\UpdateRequistion.cshtml" />
+    <Content Include="Views\AgroConfiguration\_GetRequisitionDetails.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
