--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3224,13 +3224,13 @@
     <Content Include="Views\AgroConfiguration\UpdateRequistion.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetRequisitionDetails.cshtml" />
     <Content Include="Views\AgroConfiguration\GetProductwisesalesReport.cshtml" />
-
     <Content Include="Views\AgroConfiguration\_GetRequistionDetailsbyInfoId.cshtml" />
-
-
     <Content Include="Views\AgroConfiguration\_ReturnDetails.cshtml" />
-
-
+    <Content Include="Views\AgroConfiguration\GetRequisitionProduction.cshtml" />
+    <Content Include="Views\AgroConfiguration\_GetRequisitionDetailsProduction.cshtml" />
+    <Content Include="Views\AgroConfiguration\_GetRequistionDetailsbyInfoIdForProduction.cshtml" />
+    <Content Include="Views\AgroConfiguration\_GetRequisitionProduction.cshtml" />
+    <Content Include="Views\AgroConfiguration\ReceivedOrCanelIssuedRawMaterial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
