--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -94,6 +94,10 @@
     <Compile Include="AgricultureContextMigrations\202210310842044_SalesReturn.Designer.cs">
       <DependentUpon>202210310842044_SalesReturn.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211010949504_datedelReturnsale.cs" />
+    <Compile Include="AgricultureContextMigrations\202211010949504_datedelReturnsale.Designer.cs">
+      <DependentUpon>202211010949504_datedelReturnsale.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -148,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210310842044_SalesReturn.resx">
       <DependentUpon>202210310842044_SalesReturn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211010949504_datedelReturnsale.resx">
+      <DependentUpon>202211010949504_datedelReturnsale.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
