--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -98,6 +98,10 @@
     <Compile Include="AgricultureContextMigrations\202211010949504_datedelReturnsale.Designer.cs">
       <DependentUpon>202211010949504_datedelReturnsale.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211011106266_msizelReturnsale.cs" />
+    <Compile Include="AgricultureContextMigrations\202211011106266_msizelReturnsale.Designer.cs">
+      <DependentUpon>202211011106266_msizelReturnsale.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -155,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202211010949504_datedelReturnsale.resx">
       <DependentUpon>202211010949504_datedelReturnsale.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211011106266_msizelReturnsale.resx">
+      <DependentUpon>202211011106266_msizelReturnsale.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
