--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -102,6 +102,10 @@
     <Compile Include="AgricultureContextMigrations\202211011106266_msizelReturnsale.Designer.cs">
       <DependentUpon>202211011106266_msizelReturnsale.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211011159259_Agriculture_typeinTractblandrequistionInfoIdandTypeinissueStock.cs" />
+    <Compile Include="AgricultureContextMigrations\202211011159259_Agriculture_typeinTractblandrequistionInfoIdandTypeinissueStock.Designer.cs">
+      <DependentUpon>202211011159259_Agriculture_typeinTractblandrequistionInfoIdandTypeinissueStock.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -162,6 +166,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202211011106266_msizelReturnsale.resx">
       <DependentUpon>202211011106266_msizelReturnsale.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211011159259_Agriculture_typeinTractblandrequistionInfoIdandTypeinissueStock.resx">
+      <DependentUpon>202211011159259_Agriculture_typeinTractblandrequistionInfoIdandTypeinissueStock.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
