--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3235,6 +3235,8 @@
     <Content Include="Views\AgroConfiguration\SalesReturn.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetAgroSalesReturn.cshtml" />
     <Content Include="Views\AgroConfiguration\SalesReturnList.cshtml" />
+    <Content Include="Views\_SalesReturnListview.cshtml" />
+    <Content Include="Views\AgroConfiguration\_SalesReturnListview.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
