--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3276,6 +3276,8 @@
     <Content Include="Views\AgroConfiguration\_SalesReturnListview.cshtml" />
     <Content Include="Views\AgroConfiguration\RawMaterialReturnAllList.cshtml" />
     <Content Include="Views\AgroConfiguration\_ALLRawMaterialReturnListview.cshtml" />
+    <Content Include="Views\AgroConfiguration\SalesReturnAdjustCreate.cshtml" />
+    <Content Include="Views\AgroConfiguration\_GetAgroSalesReturnAdjust.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
