--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -110,6 +110,10 @@
     <Compile Include="AgricultureContextMigrations\202211021305586_Agriculture_ProductSalesDetails.Designer.cs">
       <DependentUpon>202211021305586_Agriculture_ProductSalesDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211030457084_Agriculture_SalesProductTableUpdate.cs" />
+    <Compile Include="AgricultureContextMigrations\202211030457084_Agriculture_SalesProductTableUpdate.Designer.cs">
+      <DependentUpon>202211030457084_Agriculture_SalesProductTableUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -176,6 +180,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202211021305586_Agriculture_ProductSalesDetails.resx">
       <DependentUpon>202211021305586_Agriculture_ProductSalesDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211030457084_Agriculture_SalesProductTableUpdate.resx">
+      <DependentUpon>202211030457084_Agriculture_SalesProductTableUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
