--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -114,6 +114,10 @@
     <Compile Include="AgricultureContextMigrations\202211030457084_Agriculture_SalesProductTableUpdate.Designer.cs">
       <DependentUpon>202211030457084_Agriculture_SalesProductTableUpdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211030832542_Agriculture_CommissionOnProductandHistoryTableAdded.cs" />
+    <Compile Include="AgricultureContextMigrations\202211030832542_Agriculture_CommissionOnProductandHistoryTableAdded.Designer.cs">
+      <DependentUpon>202211030832542_Agriculture_CommissionOnProductandHistoryTableAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -183,6 +187,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202211030457084_Agriculture_SalesProductTableUpdate.resx">
       <DependentUpon>202211030457084_Agriculture_SalesProductTableUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211030832542_Agriculture_CommissionOnProductandHistoryTableAdded.resx">
+      <DependentUpon>202211030832542_Agriculture_CommissionOnProductandHistoryTableAdded.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
